[gd_scene load_steps=13 format=2]

[ext_resource path="res://Data/Units/Unit.tscn" type="PackedScene" id=1]
[ext_resource path="res://Data/Units/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/stars/icons/ffffff/transparent/1x1/delapouite/round-star.svg" type="Texture" id=3]
[ext_resource path="res://Assets/medieval-fantasy/icons/ffffff/transparent/1x1/lorc/barbute.svg" type="Texture" id=4]
[ext_resource path="res://Data/Units/ExperienceBar.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.839216, 0.921569, 0.666667, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.313726, 0.286275, 0.258824, 1 )

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.103448, 0.741379, 1 )
colors = PoolColorArray( 0.862745, 1, 0.72549, 0, 0.862745, 1, 0.72549, 0.784314, 0.862745, 1, 0.72549, 0.784314, 0.862745, 1, 0.72549, 0 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.0849237, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.512405, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 2
emission_box_extents = Vector3( 445, 1, 1 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 20.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 130.0
angular_velocity = 80.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.11
scale_random = 0.07
scale_curve = SubResource( 7 )
color_ramp = SubResource( 5 )

[node name="Player" groups=["player"] instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="PlayerCamera" type="Camera2D" parent="." index="0"]
current = true
smoothing_enabled = true

[node name="Sprite" parent="." index="2"]
self_modulate = Color( 1, 1, 1, 1 )
texture = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="." index="6"]

[node name="ItemContainer" type="HBoxContainer" parent="CanvasLayer" index="0"]
margin_left = 71.0
margin_top = 546.0
margin_right = 937.0
margin_bottom = 641.0
custom_constants/separation = 64

[node name="ExperienceBar" type="ProgressBar" parent="CanvasLayer" index="1"]
margin_left = 80.0
margin_top = 590.0
margin_right = 972.0
margin_bottom = 600.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
percent_visible = false
script = ExtResource( 5 )

[node name="LevelUpParticles" type="Particles2D" parent="CanvasLayer/ExperienceBar" index="0"]
position = Vector2( 430, 0 )
emitting = false
amount = 25
lifetime = 3.0
one_shot = true
explosiveness = 0.7
process_material = SubResource( 3 )
texture = ExtResource( 3 )

[node name="CanvasTween" type="Tween" parent="CanvasLayer" index="2"]
